app/sass/modules/snapshot.scss
$transitionTime: 0.25s;

.snapshot {
  width: 100%;
  min-height: 250px;
  position: relative;
  background: #f8f8f8;

  &:hover {
    .snapshot-info {
      border-top: 1px solid transparent;
      height: calc(100% - 80px);
      padding: 40px;
      background: rgba(37,49,62,0.9);
      top: 0;

      .name {
        color: white;
        font-weight: 500;
      }
      .meta {
        opacity: 1;
      }
    }

  }

}
.snapshot-image {
  position: relative;
  display: block;
  margin: 0 auto;
  max-height: 100%;
  max-width: 100%;
}
.snapshot-info {
  position: absolute;
  top: calc(100% - 60px);
  left: 0;
  height: calc(100% - 40px);
  width: calc(100% - 40px);
  padding: 20px;
  color: #fff;
  background: white;
  border-top: 1px solid #d8d8d8;
  transition: background $transitionTime, top $transitionTime, padding $transitionTime;

  .name {
    color: #3c4a50;
    font-size: 24px;
    letter-spacing: 1px;
    margin-bottom: 10px;
    transition: color $transitionTime, font-weight $transitionTime;
    text-transform: uppercase;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
  .meta {
    width: 100%;
    opacity: 0;
    line-height: 18px;
    transition: opacity $transitionTime;
  }

}

.snapshot-actions {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  display: flex;
  align-content: space-around;
  background: white;
  a {
    flex: 1;
    color: #555;
    padding: 20px;
    text-transform: uppercase;
    line-height: 20px;
    text-align: center;
    &:hover {
      background: darken(white, 8);
    }
  }
}

